Fixed Firefox issue with input text fields spilling past container.

--- a/src/index.scss
+++ b/src/index.scss
@@ -30,6 +30,7 @@ label {
 
     input[type=text] {
         display: block;
+        width: 100%;
         height: 30px;
         padding: 0 10px;
     }
